# CMakeWPFSample

./: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  README.md  cmake_generate.bat
Properties/: AssemblyInfo.cs
